--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <nav class="navbar" style="background-color: rgb(0, 221, 0);">
         <div class="container-fluid">
           <a class="navbar-brand" style="margin: auto;">
-            Irga Tegar Syahrial
+            Muhammad Ihsan THs
         </div>
       </nav>
     <table class="table">
